<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/map_action_normal"
        android:orderInCategory="100"
        android:title="@string/menu_map_normal"
        app:showAsAction="never" />

    <item
        android:id="@+id/map_action_satellite"
        android:orderInCategory="100"
        android:title="@string/menu_map_satellite"
        app:showAsAction="never" />

    <item
        android:id="@+id/map_action_hybrid"
        android:orderInCategory="100"
        android:title="@string/menu_map_hybrid"
        app:showAsAction="never" />

    <item
        android:id="@+id/map_action_terrain"
        android:orderInCategory="100"
        android:title="@string/menu_map_terrain"
        app:showAsAction="never" />

    <item
        android:id="@+id/map_action_none"
        android:orderInCategory="100"
        android:title="@string/menu_map_none"
        app:showAsAction="never" />
</menu>